notejam/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notejam
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notejam
  template:
    metadata:
      labels:
        app: notejam
    spec:
      containers:
      - name: notejam-app-1
        image: notejam-app
        ports:
        - containerPort: 80
